fix read more button spacing

--- a/_sass/partials/3-layouts/_home-page.scss
+++ b/_sass/partials/3-layouts/_home-page.scss
@@ -70,6 +70,7 @@
 
   .post-readmore-link {
     @include btn;
+    display: inline-block;
   
     [data-theme="dark"] & {
       color: getColor('accent', 'dark');
